--- a/Edu_Home/Areas/AdminPanel/Views/_ViewImports.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
- 
+﻿@using Edu_Home.DAL.Entities
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
