--- a/Edu_Home/Views/Home/Index.cshtml
+++ b/Edu_Home/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
         </div>
         <!-- End Slingle Slide -->
         <!-- Start Slingle Slide -->
-        <div class="single-slide item" style="background-image: url(~/~/img/slider/slider2.jpg)">
+        <div class="single-slide item" style="background-image: url(/img/slider/slider2.jpg)">
             <!-- Start Slider Content -->
             <div class="slider-content-area">
                 <div class="container">
@@ -49,7 +49,7 @@
         </div>
         <!-- End Slingle Slide -->
         <!-- Start Slingle Slide -->
-        <div class="single-slide item" style="background-image: url(~/img/slider/slider3.jpg)">
+        <div class="single-slide item" style="background-image: url(/img/slider/slider3.jpg)">
             <!-- Start Slider Content -->
             <div class="slider-content-area">
                 <div class="container">
