Admin P_Teacher_ended

--- a/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -183,7 +183,9 @@
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link"asp-controller="Slide" asp-action="index">Slider</a></li>
-                                <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+                            </ul>
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Teacher" asp-action="index">Teacher</a></li>
                             </ul>
                         </div>
                     </li>
