--- a/Edu_Home/Areas/AdminPanel/Views/Slide/Update.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Slide/Update.cshtml
@@ -5,7 +5,7 @@
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title"> Update category</h4>
-                <img src="~/img/slider/@Model.Image" style="width:130px;height:130px" />
+                <img src="~/img/slider/@Model.ImageUrl" style="width:130px;height:130px" />
                 <form class="forms-sample" method="post" asp-action="Update" enctype="multipart/form-data">
                     <div class="form-group">
                         <label asp-for="Image">Name</label>
