--- a/Edu_Home/Areas/AdminPanel/Views/Teacher/Index.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Teacher/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@*@using Edu_Home.DAL.Entities*@
 
-@model List<Slider>
+@model List<Teacher>
 
 
 <div class="row col-lg-12">
-    <div class="col-lg-8 grid-margin stretch-card">
+    <div class="col-lg-9 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
                 <h4 class="card-title">Basic Table</h4>
@@ -14,30 +14,27 @@
                         <thead>
                             <tr>
                                 <th>Image</th>
-                                <th>Title</th>
-                                <th>Subtile</th>
-                                <th>Buttons</th>
-                                <th>Button Link</th>
-                                <th>Actions</th>
+                                <th>FullName</th>
+                                <th>Position</th>
+                                <th>Degree</th>
+                                <th>Experience</th>
+                                <th>Mail</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td>
-                                        <img style="border-radius:0px; object-fit:contain; height:150px; width:150px;" src="~/img/slider/@item.ImageUrl" alt="image">
-                                    </td>
-                                    <td>
-                                        @item.Title
-                                    </td>
-                                    <td>
-                                        @item.SubTitle
-                                    </td>
-                                    <td>
-                                        @item.ButtonText
-                                    </td>
+                                   <td>
+                                        <img style="border-radius:0px; object-fit:contain; height:100px; width:100px;" src="~/img/teacher/@item.ImageUrl" alt="image">
+                                   </td>
+                                    <td>@item.FullName</td>
+                                    <td>@item.Position</td>
+                                    <td>@item.Degree</td>
+                                    <td>@item.Experience</td>
+                                    <td>@item.Mail</td>
 
+                                  
                                     <td class="text-nowrap">
                                         <a class="btn btn-primary" asp-action="details" asp-route-id="@item.Id">Details</a>
                                         <a class="btn btn-success" asp-action="update" asp-route-id="@item.Id">Update</a>
