--- a/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -193,6 +193,9 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-controller="About" asp-action="index">About</a></li>
                             </ul>
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Category" asp-action="index">Category</a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="nav-item">
