--- a/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -202,6 +202,9 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Speaker" asp-action="index">Speaker</a></li>
                             </ul>
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Event" asp-action="index">Event</a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="nav-item">
