Admin_Login_Added

--- a/Edu_Home/Views/Shared/_Layout.cshtml
+++ b/Edu_Home/Views/Shared/_Layout.cshtml
@@ -91,6 +91,7 @@
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                         <li><a href="#">Buy Now</a>
+                                        <li><a asp-controller="account" asp-action="login">Admin</a>
                                     </ul>
                                 </nav>
                             </div>
