--- a/Edu_Home/Views/Shared/_Layout.cshtml
+++ b/Edu_Home/Views/Shared/_Layout.cshtml
@@ -74,10 +74,10 @@
                                             </ul>
                                         </li>
                                         <li class="hidden-sm">
-                                            <a href="teacher.html">teacher</a>
+                                            <a asp-controller="teacher" asp-action="index">Teacher</a>
                                             <ul>
-                                                <li><a href="teacher.html">teacher</a></li>
-                                                <li><a href="teacher-details.html">teacher details</a></li>
+                                                <li><a asp-controller="teacher" asp-action="index">Teacher</a></li>
+                                                <li><a asp-controller ="teacher" asp-action="details">Details</a></li>
                                             </ul>
                                         </li>
                                         <li>
