--- a/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -151,7 +151,7 @@
                                 <i class="mdi mdi-settings text-primary"></i>
                                 Settings
                             </a>
-                            <a class="dropdown-item">
+                            <a class="dropdown-item" asp-area="default" asp-controller="account" asp-action="logout">
                                 <i class="mdi mdi-logout text-primary"></i>
                                 Logout
                             </a>
