--- a/Edu_Home/Views/Shared/_Layout.cshtml
+++ b/Edu_Home/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="logo">
-                            <a href="index.html"><img src="~/img/logo/logo.png" alt="eduhome" /></a>
+                            <a asp-controller="home" asp-action="index"><img src="~/img/logo/logo.png" alt="eduhome" /></a>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-9 col-xs-12">
@@ -47,49 +47,27 @@
                                 <nav>
                                     <ul>
                                         <li>
-                                            <a href="index.html">Home</a>
-                                            <ul>
-                                                <li><a href="index.html">Home One</a></li>
-                                                <li><a href="index-2.html">Home Two</a></li>
-                                                <li><a href="index-3.html">Home Three</a></li>
-                                                <li><a href="index-4.html">Home Four</a></li>
-                                                <li><a href="index-5.html">Home Five</a></li>
-                                            </ul>
+                                            <a asp-controller="home" asp-action="index">Home</a>
+                                            
                                         </li>
-                                        <li><a href="about.html">About</a></li>
+                                        <li><a asp-controller="about" asp-action="index">About</a></li>
                                         <li>
-                                            <a href="course.html">courses</a>
-                                            <ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
-                                            </ul>
+                                            <a asp-controller="course" asp-action="index">courses</a>
+                                            
                                         </li>
                                         <li>
-                                            <a href="event.html">event</a>
-                                            <ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
-                                            </ul>
+                                            <a asp-controller="event" asp-action="index">event</a>
+                                            
                                         </li>
                                         <li class="hidden-sm">
                                             <a asp-controller="teacher" asp-action="index">Teacher</a>
-                                            <ul>
-                                                <li><a asp-controller="teacher" asp-action="index">Teacher</a></li>
-                                                <li><a asp-controller ="teacher" asp-action="details">Details</a></li>
-                                            </ul>
+                                            
                                         </li>
                                         <li>
-                                            <a href="blog.html">blog</a>
-                                            <ul>
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
-                                                <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
-                                                <li><a href="blog-details.html">blog details</a></li>
-                                            </ul>
+                                            <a asp-controller="blog" asp-action="index">blog</a>
+                                            
                                         </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a asp-controller="home" asp-action="index">Mine</a></li>
                                         <li><a href="#">Buy Now</a>
                                         <li><a asp-controller="account" asp-action="login">Admin</a>
                                     </ul>
@@ -179,6 +157,7 @@
     <script src="~/js/owl.carousel.min.js"></script>
     <script src="~/js/jquery.mb.YTPlayer.js"></script>
     <script src="~/js/jquery.nicescroll.min.js"></script>
+    <script src="~/js/search.js"></script>
     <script src="~/js/plugins.js"></script>
     <script src="~/js/main.js"></script>
 </body>
