--- a/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/Edu_Home/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -205,6 +205,12 @@
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-controller="Event" asp-action="index">Event</a></li>
                             </ul>
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="FooterLogo" asp-action="index">FooterLogo</a></li>
+                            </ul>
+                            <ul class="nav flex-column sub-menu">
+                                <li class="nav-item"> <a class="nav-link" asp-controller="FooterContact" asp-action="index">FooterContact</a></li>
+                            </ul>
                         </div>
                     </li>
                     <li class="nav-item">
